--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="hero-content">
                 <h1>Hi, I'm <span>Ashish Kumar</span></h1>
-                <p>B.tech computer science & Engineer</p>
+                <p>B.Tech Computer Science & Engineer</p>
                 <div class="hero-btns">
                     <a href="images/ashish-resume.jpg" class="btn btn-primary">
                         <i class="fas fa-download"></i> Download CV
@@ -1401,5 +1401,6 @@
     <script src="JavaScripts.js"></script>
     <!-- <script src=""></script> -->
 </body>
+
 
 </html>
