--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <button class="filter-btn" data-filter="course"><i class="fa-solid fa-award"></i> Courses</button>
                 <button class="filter-btn" data-filter="internship"><i class="fas fa-briefcase"></i>
                     Internships</button>
-                <button class="filter-btn" data-filter="other">  <span class="cert-icon">📄</span> Other</button>
+                <button class="filter-btn" data-filter="other"><i class="fa-regular fa-page"></i> Other</button>
             </div>
 
             <!-- Education Items -->
@@ -1463,5 +1463,6 @@
 
 
 </html>
+
 
 
