--- a/index.html
+++ b/index.html
@@ -96,12 +96,10 @@
             <!-- Filter Buttons -->
             <div class="filter-container">
                 <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="education"><i class="fas fa-graduation-cap"></i>
-                    Education</button>
+                <button class="filter-btn" data-filter="education"><i class="fas fa-graduation-cap"></i> Education</button>
                 <button class="filter-btn" data-filter="course"><i class="fa-solid fa-award"></i> Courses</button>
-                <button class="filter-btn" data-filter="internship"><i class="fas fa-briefcase"></i>
-                    Internships</button>
-                <button class="filter-btn" data-filter="other"><i class="fa-regular fa-page"></i> Other</button>
+                <button class="filter-btn" data-filter="internship"><i class="fas fa-briefcase"></i> Internships</button>
+                <button class="filter-btn" data-filter="other"><i class="fa-regular fa-page"></i> 📄 Other</button>
             </div>
 
             <!-- Education Items -->
@@ -1463,6 +1461,7 @@
 
 
 </html>
+
 
 
 
