--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <!-- Filter Buttons -->
             <div class="filter-container">
-                <button class="filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn active" data-filter="all"><i class="fa-solid fa-book-atlas"></i> All</button>
                 <button class="filter-btn" data-filter="education"><i class="fas fa-graduation-cap"></i> Education</button>
                 <button class="filter-btn" data-filter="course"><i class="fa-solid fa-award"></i> Courses</button>
                 <button class="filter-btn" data-filter="internship"><i class="fas fa-briefcase"></i> Internships</button>
@@ -1461,6 +1461,7 @@
 
 
 </html>
+
 
 
 
