--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                 <div class="education-item other" data-category="other">
                     <div class="item-header">
                         <div class="item-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fa-solid fa-file-lines"></i>
                         </div>
                         <div>
                             <div class="item-date">Oct 2024</div>
@@ -657,7 +657,7 @@
                 <div class="education-item other" data-category="other">
                     <div class="item-header">
                         <div class="item-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fa-solid fa-file-lines"></i>
                         </div>
                         <div>
                             <div class="item-date">Nev 2024</div>
@@ -686,7 +686,7 @@
                 <div class="education-item other" data-category="other">
                     <div class="item-header">
                         <div class="item-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fa-solid fa-file-lines"></i>
                         </div>
                         <div>
                             <div class="item-date">2024</div>
@@ -712,7 +712,7 @@
                 <div class="education-item other" data-category="other">
                     <div class="item-header">
                         <div class="item-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fa-solid fa-file-lines"></i>
                         </div>
                         <div>
                             <div class="item-date">2025</div>
@@ -740,7 +740,7 @@
                 <div class="education-item other" data-category="other">
                     <div class="item-header">
                         <div class="item-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fa-solid fa-file-lines"></i>
                         </div>
                         <div>
                             <div class="item-date">march 2025</div>
@@ -1461,6 +1461,7 @@
 
 
 </html>
+
 
 
 
